tdp-config-catalog-cce/helm/rollout-demo/blue-green/base/active-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-active
  namespace: rollout-demo
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 5678
