tdp-config-catalog-cce/helm/rollout-demo/blue-green/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: rollout-demo
spec:
  parentRefs:
  - name: demo-gateway
  rules:
  - backendRefs:
    - name: demo-active
      port: 80
